[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = 'svg_turtle'
dynamic = ['version', 'authors', 'description']
dependencies = ['svgwrite']
optional-dependencies.ipython = ['ipython']
readme = 'README.md'

# Keep Python versions in synch with build.yml and tox.ini.
# Classifiers are from https://pypi.org/classifiers/
classifiers=[
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"]

[project.urls]
Source = "https://github.com/donkirkby/svg-turtle"
Issues = "https://github.com/donkirkby/svg-turtle/issues"
